--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "example": "example"
   },
   "dependencies": {
-    "request": "^2.50.0",
+    "request": "2.65.0",
     "xml2json": "^0.9.0"
   },
   "devDependencies": {
