--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "request": "^2.50.0",
-    "xml2js": "^0.4.16",
+    "xml2js": "^0.4.16"
   },
   "devDependencies": {
     "chai": "^3.0.0",
